--- a/pom.xml
+++ b/pom.xml
@@ -4,134 +4,21 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>AsukaMeow</groupId>
-    <artifactId>at.meowww.AsukaMeow</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
-    <packaging>jar</packaging>
+    <groupId>at.meowww.AsukaMeow</groupId>
+    <artifactId>AsukaMeow-parent</artifactId>
+    <version>${revision}</version>
+    <packaging>pom</packaging>
 
     <properties>
+        <revision>0.0.2-SNAPSHOT</revision>
+        <name>AsukaMeow</name>
         <author>Clooooode</author>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>1.8</java.version>
-        <output_dir>${project.build.outputDirectory}</output_dir>
+        <main>${project.groupId}.${name}</main>
     </properties>
 
+    <modules>
+        <module>core</module>
+        <module>dist</module>
+    </modules>
 
-    <dependencies>
-        <dependency>
-            <groupId>com.destroystokyo.paper</groupId>
-            <artifactId>paper-api</artifactId>
-            <version>1.12.2-R0.1-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-        <!-- Mongo JDBC -->
-        <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>mongo-java-driver</artifactId>
-            <version>3.12.0</version>
-        </dependency>
-    </dependencies>
-
-
-    <repositories>
-        <repository>
-            <id>papermc</id>
-            <url>https://papermc.io/repo/repository/maven-public/</url>
-        </repository>
-        <repository>
-            <id>destroystokyo-repo</id>
-            <url>https://repo.destroystokyo.com/content/repositories/snapshots/</url>
-        </repository>
-    </repositories>
-
-    <build>
-        <finalName>${project.groupId}-${project.version}</finalName>
-        <sourceDirectory>src/main/java</sourceDirectory>
-        <outputDirectory>out/</outputDirectory>
-        <resources>
-            <resource>
-                <targetPath>.</targetPath>
-                <filtering>true</filtering>
-                <directory>${basedir}/src/main/resources</directory>
-                <includes>
-                    <include>plugin.yml</include>
-                    <include>config.yml</include>
-                </includes>
-            </resource>
-        </resources>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>com.google.code.maven-replacer-plugin</groupId>
-                <artifactId>replacer</artifactId>
-                <version>1.5.3</version>
-                <executions>
-                    <execution>
-                        <phase>prepare-package</phase>
-                        <goals>
-                            <goal>replace</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <file>${basedir}/src/main/resources/plugin.yml</file>
-                    <outputFile>${basedir}/out/plugin.yml</outputFile>
-                    <regex>false</regex>
-                    <replacements>
-                        <replacement>
-                            <token>{NAME}</token>
-                            <value>${project.groupId}</value>
-                        </replacement>
-                        <replacement>
-                            <token>{VERSION}</token>
-                            <value>${project.version}</value>
-                        </replacement>
-                        <replacement>
-                            <token>{AUTHOR}</token>
-                            <value>${author}</value>
-                        </replacement>
-                        <replacement>
-                            <token>{MAIN}</token>
-                            <value>${project.artifactId}.${project.groupId}</value>
-                        </replacement>
-                    </replacements>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.1.0</version>
-                <configuration>
-                    <outputDirectory>${output_dir}</outputDirectory>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.1.0</version>
-                <configuration>
-                    <outputDirectory>${output_dir}</outputDirectory>
-                    <descriptors>
-                        <descriptor>assembly.xml</descriptor>
-                    </descriptors>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>make-assembly</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
 </project>
