--- a/docker-compose/prod.yml
+++ b/docker-compose/prod.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   mongo:
-    image: mongo
+    image: mongo:3.4-xenial
     volumes:
       - "../mongo-data:/data/db"
     ports:
