--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
     <modules>
         <module>core</module>
+        <module>CraftBukkit_1_14_R1</module>
         <module>dist</module>
     </modules>
 
