--- a/core/pom.xml
+++ b/core/pom.xml
@@ -25,6 +25,12 @@
             <artifactId>mongo-java-driver</artifactId>
             <version>3.12.0</version>
         </dependency>
+        <!-- hibernate validator-->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>5.2.0.Final</version>
+        </dependency>
         <!-- JUnit -->
         <dependency>
             <groupId>junit</groupId>
