--- a/CraftBukkit_1_14_R1/pom.xml
+++ b/CraftBukkit_1_14_R1/pom.xml
@@ -12,6 +12,13 @@
     </parent>
 
     <dependencies>
+        <!-- Paper -->
+        <dependency>
+            <groupId>com.destroystokyo.paper</groupId>
+            <artifactId>paper-api</artifactId>
+            <version>1.12.2-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
+        </dependency>
         <dependency>
             <groupId>org.bukkit</groupId>
             <artifactId>craftbukkit</artifactId>
