Add Serializer & more detail about database store
Add UUID, type, title fields in Dialog class.
Add command executor to handle list/reload/open command & tab complete.
Add toDocument & fromDocument method in Page.
Remove test code of Dialog class in UserListener class.

--- a/core/src/main/resources/plugin.yml
+++ b/core/src/main/resources/plugin.yml
@@ -2,3 +2,10 @@ name: ${name}
 version: ${version}
 author: ${author}
 main: ${main}
+commands:
+  asuka-dialog:
+    description: Controll the AsukaMeow's dialogs.
+    usage: |
+      /asuka-dialog reload
+      /asuka-dialog list
+      /asuka-dialog open [UUID]
