--- a/core/src/main/resources/plugin.yml
+++ b/core/src/main/resources/plugin.yml
@@ -9,3 +9,7 @@ commands:
       /asuka-dialog reload
       /asuka-dialog list
       /asuka-dialog open [UUID]
+  asuka-system:
+    description: Controll the AsukaMeow's systems.
+    usage: |
+      /asuka-system announcement set-dialog [UUID]
