Add Give command and method
Add get/set AsukaItem's method in NMS ItemFactory.
Add Give command in ItemCommandExecutor.
Add givePlayer method in ItemManager.

--- a/core/src/main/resources/plugin.yml
+++ b/core/src/main/resources/plugin.yml
@@ -13,6 +13,7 @@ commands:
     description: Controll the AsukaMeow's items.
     usage: |
       /asuka-item reload
+      /asuka-item give [item_id]
   asuka-system:
     description: Controll the AsukaMeow's systems.
     usage: |
