Introduce Territory system
Add Territory, Manager, CommandExecutor for usage.
Add Cuboid class to hanlde territory's space.
Add currentTerritoryId field in User class for in-game calculate.

--- a/core/src/main/resources/plugin.yml
+++ b/core/src/main/resources/plugin.yml
@@ -9,6 +9,11 @@ commands:
       /asuka-dialog reload
       /asuka-dialog list
       /asuka-dialog open [UUID]
+  asuka-territory:
+    description: Controll the AsukaMeow's territories.
+    usage: |
+      /asuka-territory reload
+      /asuka-territory list
   asuka-item:
     description: Controll the AsukaMeow's items.
     usage: |
